Fehler und hboxen entfernt
git-svn-id: https://svn.lug-jena.de/uni-skripte@1944 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/carl-hoehereana1/skript.ltx
+++ b/carl-hoehereana1/skript.ltx
@@ -782,7 +782,7 @@ B(s,\epsilon)$ gibt.
     enthält, d.\,h. es existiert eine Teilfolge
     $(x_{n}^{(1)}\subseteq(x_{n}))$ mit $x_{n}^{(1)}\subseteq A_{1}$ und für
     $x,y\in A_{1}$ gilt $d(x,y)\leq2$.\\
-    Induktionsschluss: Seien für festes $m$ die Mengen $A_{m}$ und die Folgen
+    Der Induktionsschluss ergibt: Seien für festes $m$ die Mengen $A_{m}$ und die Folgen
     $(x_{n}^{(m)})\subseteq(x_{n}^{(m-1)})$ bereits konstruiert. Ist
     $z=\{z_{1},\dotsc, z_{l}\}$ ein $\frac{1}{m+1}$"~Netz für $M$, d.\,h.
     $M\subseteq\bigcup_{i=1}^{l} B(z_{i}, \frac{1}{m+1})$, so existiert eine
@@ -1580,13 +1580,17 @@ $X=[\R^{2}, \norm{\cdot}_{2}]$.
     x_{i}}$. Es gilt, dass $f$ auf der kompakten Menge $\partial B$ stetig.
     Dies sieht man durch Abschätzung: Für
     $\lambda=(\lambda_{1},\dotsc,\lambda_{n}), \mu=(\mu_{1},\dotsc,\mu_{n})$
-    ist $\norm{f(\lambda)-f(\mu)}=\abs{ \norm{\sum_{i=1}^{n} \lambda_{i} x_{i}}
-    - \norm{\sum_{i=1}^{n} \mu_{i} x_{i}}}\leq
-    \norm{\sum_{i=1}^{n} (\lambda_{i}-
-    \mu_{i})x_{i}} \leq \sum_{i=1}^{n} \abs{\lambda_{i}-\mu_{i}}
-    \norm{x_{i}}\leq n\max_{1\leq i\leq n} \norm{x_{i}} \max_{1\leq i\leq n}
-    \abs{\lambda_{i}-\mu_{i}}= n \max_{1\leq i\leq n} \abs{x_{i}}
-    \norm{\lambda-\mu}_{\infty}$. Die Abschätzung zeigt, dass $f$ sogar
+    ist:
+    \begin{align*}
+      \norm{f(\lambda)-f(\mu)} &=\abs{ \norm{\sum_{i=1}^{n} \lambda_{i} x_{i}}
+	 - \norm{\sum_{i=1}^{n} \mu_{i} x_{i}}}\leq \norm{\sum_{i=1}^{n}
+	 (\lambda_{i}- \mu_{i})x_{i}}\\
+      &\leq \sum_{i=1}^{n} \abs{\lambda_{i}-\mu_{i}} \norm{x_{i}}\leq
+	 n\max_{1\leq i\leq n} \norm{x_{i}} \max_{1\leq i\leq n}
+	 \abs{\lambda_{i}-\mu_{i}}\\
+      &= n \max_{1\leq i\leq n} \abs{x_{i}} \norm{\lambda-\mu}_{\infty}
+    \end{align*}
+    Die Abschätzung zeigt, dass $f$ sogar
     gleichmäßig stetig auf $\ell^{n}_{\infty}$ ist. Ferner ist $f(\lambda)$
     positiv auf der Einheitssphäre $\partial B_{\ell^{n}_{\infty}}$. Denn
     $\{x_{1},\dotsc, x_{n}\}$ ist eine Basis. Nach \autoref{satz:i.213} nimmt
@@ -1609,7 +1613,7 @@ $X=[\R^{2}, \norm{\cdot}_{2}]$.
 \begin{satz}\label{satz:i.54}
   Für einen endlich"=dimensionalen normierten Raum gelten:
   \begin{enumerate}[(i)]
-   \item $\subset X$ ist genau dann kompakt, wenn $K$ beschränkt und
+   \item $K\subset X$ ist genau dann kompakt, wenn $K$ beschränkt und
     abgeschlossen ist.
    \item $X$ ist ein Banachraum.
   \end{enumerate}
@@ -1617,7 +1621,7 @@ $X=[\R^{2}, \norm{\cdot}_{2}]$.
 Sei $\dim X=N$ und wählen eine Basis $\{x_{1},\dotsc, x_{N}\}$ in
       $X$. Dann ist $X=\{\sum_{i=1}^{n} \lambda_{i} x_{i}\colon\lambda=
       (\lambda_{1},\dotsc,\lambda_{N})\in\K\}$. Nach \autoref{satz:i.53} ist
-      die Norm $\norm{x}= \max_{1\leq i\leq N} \abs{\lambda_{i}}$ äquiivalent
+      die Norm $\norm{x}= \max_{1\leq i\leq N} \abs{\lambda_{i}}$ äquivalent
       zur ursprünglichen Norm. Damit gelten folgende Abschätzungen:
       $m\norm{\lambda}_{\infty}= m\norm{x}_{o}\leq \norm{x}\leq M\norm{x}_{o}=
       M\norm{\lambda}_{\infty}$. Sei nun $T\colon\ell^{n}_{\infty}\rightarrow
@@ -1896,10 +1900,10 @@ Sei $\dim X=N$ und wählen eine Basis $\{x_{1},\dotsc, x_{N}\}$ in
 
 %satz II.2.3
 \begin{satz}
-  Seien $X,Y$ Vektorräume.
+  Seien $X,Y$ Vektorräume. Dann gelten:
   \begin{enumerate}[(i)]
    \item Sei $T$ linear und invertierbar. Dann ist $S\colon Y\rightarrow X$ mit
-    $TS=I_{Y}, ST=I_{X}$ linear und eindeutig.
+    $TS=I_{Y}, ST=I_{X}$ linear und eindeutig, also $T^{-1}=S$.
    \item Der lineare Operator $T\colon X\rightarrow Y$ ist genau dann
     invertierbar, wenn $N(T)=\{0\}$ und $R(T)=Y$ ist. 
   \end{enumerate}
@@ -1909,10 +1913,13 @@ Sei $\dim X=N$ und wählen eine Basis $\{x_{1},\dotsc, x_{N}\}$ in
       $TR=TS=I_{Y}$. Dann folgt, $R=RI_{Y}= RTS=I_{X}S=S$, d.\,h. $S$ ist
       eindeutig bestimmt.
 
+      Seien $y_{1}, y_{2}\in Y$ und $\alpha, \beta\in\K$. Wir wollen zeigen,
+      dass $S$ linear ist:
       Wir haben $S(\alpha y_{1}+ \beta y_{2})= S(\alpha TSy_{1}+ \beta
       TSy_{2})= ST(\alpha Sy_{1}+ \beta Sy_{2})= \alpha Sy_{1}+ \beta Sy_{2}$.
      \item Für die Hinrichtung sei $T$ linear und invertierbar und $T^{-1}$
-      das lineare Inverse. Es folgt: $Tx=0\Rightarrow x=T^{-1}Tx= T^{-1}(0)=
+      das lineare Inverse von $T$, d.\,h. $I_{X}=T^{-1}T$ und $I_{Y}=
+      TT^{-1}$. Es folgt: $Tx=0\Rightarrow x=T^{-1}Tx= T^{-1}(0)=
       0\Rightarrow N(T)=\{0\}$. Weiter ist zu zeigen, dass $R(T)=Y$. Sei dazu
       $y\in Y$ und es ist $y=T(T^{-1}y)= Tx\Rightarrow y\in R(T)$.
 
@@ -1937,12 +1944,12 @@ Sei $\dim X=N$ und wählen eine Basis $\{x_{1},\dotsc, x_{N}\}$ in
     $T^{0}\coloneq I$. Da $\CL(X)$ ein Banachraum ist, ist auch $S\coloneq
     \sum_{k=0}^{\infty} T^{k}= I+ \sum_{k=1}^{\infty} T^{k}$ konvergent in
     $\CL(X)$. Wir setzen $S\coloneq\sum_{k=0}^{\infty} T^{k}\in\CL(X)$. Dann
-    gilt für $S_{n}= \sum_{k=0}^{n} T^{k}$: $\lim_{n\rightarrow\infty}
+    gilt für $S_{n}= \sum_{k=0}^{n} T^{k}$ im Grenzprozess $\lim_{n\rightarrow\infty}
     S_{n}=S\in\CL(X)$. Ferner ist $(I-T)S_{n}= (I-T)(I+ \sum_{k=1}^{n} T^{k})=
-    I-T^{n+1}= S_{n}(I-T)$.
-
-    Wir haben $\norm{T^{n+1}}\leq\norm{T}^{n+1} \xrightarrow{\norm{T}<1}
-    0\Rightarrow T^{n+1}\rightarrow0\Rightarrow(I-T)S= (I-T)
+    I-T^{n+1}= S_{n}(I-T)\xrightarrow{n\rightarrow\infty} I$. Denn wir haben
+    $\norm{T^{n+1}}\leq\norm{T}^{n+1}
+    \xrightarrow[n\rightarrow\infty]{\norm{T}<1} 0$ Also strebt auch $T^{n+1}$
+    gegen 0. Insgesamt folgt $(I-T)S= (I-T)
     \lim_{n\rightarrow\infty} S_{n}= \lim_{n\rightarrow\infty} (I-T)S_{n} =I$.
     Analog ist auch $S(I-T)=I$. Also haben wir
     $S=(I-T)^{-1}\Rightarrow(I-T)^{-1}= I+\sum_{k=1}^{\infty} T^{k}\in\CL(X)$.
@@ -1959,7 +1966,8 @@ Sei $\dim X=N$ und wählen eine Basis $\{x_{1},\dotsc, x_{N}\}$ in
 Seien $X,Y$ normierte Vektorräume und $T\in\CL(X,Y)$. Dann ist der Nullraum
 $N(T)$ von $T$ abgeschlossen. Denn sei $(x_{n})\subset N(T)\subset X$ eine in
 $X$ konvergente Folge mit $x_{n}\rightarrow x\in X$. Die Stetigkeit von $T$
-impliziert: $0=Tx_{n}\rightarrow0=\lim Tx_{n}= T\lim x_{n}=Tx$.
+impliziert: $0=Tx_{n}\rightarrow0=\lim Tx_{n}= T\lim x_{n}=Tx$. Also $x\in
+N(T)$.
 
 %satz II.3.1
 \begin{satz}[Faktorisierungssatz]\label{satz:II.31}
@@ -1971,21 +1979,24 @@ impliziert: $0=Tx_{n}\rightarrow0=\lim Tx_{n}= T\lim x_{n}=Tx$.
 	 X/_{N(T)} \ar[r]^{T_{0}} & R(T) \ar[u]_{J_{R(T)}} }
   \end{gather*}
   Dabei ist $Q_{N(T)}\colon X\rightarrow X/_{N(T)}$ die Quotientenabbildung,
-  $J_{R(T)}\colon R(T)\rightarrow Y$ die identische Einbettung,
-  $J_{R(T)}(y)\coloneq y$ mit $y\in R(T)$ und $T_{0}\colon
+  $J_{R(T)}\colon R(T)\rightarrow Y$ die identische Einbettung mit
+  $J_{R(T)}(y)\coloneq y$ für $y\in R(T)$ und $T_{0}\colon
   X/_{N(T)}\rightarrow R(T)$ definiert durch $T_{0}[x]=Tx$.
   Für die Normen der Operatoren gilt: $\norm{J_{R(T)}}\leq1, \norm{T_{0}}=
   \norm{T}, \norm{Q_{N(T)}}\leq1$. Der Operator $T_{0}$ ist bijektiv von
   $X/_{N(T)}$ auf $R(T)$, falls $T\neq0$.
   \begin{proof}
-    Es gilt: $J_{R(T)} T_{0} Q_{N(T)}= J_{R(T)}T_{0}[x]= J_{R(T)}Tx=
-    Tx\Rightarrow J_{R(T)}T_{0}Q_{N(T)}=T$. Es ist $\norm{Q_{N(T)}}\leq1$.
-    Denn: $\norm{Q_{N(T)}}= \ndist{x}= \inf\{\norm{x-z}\colon z\in
-    N(T)\}\leq\norm{x}\Rightarrow\norm{Q_{N(T)}}\leq1$. Im Fall $T\neq0$ ist
-    $N(T)\subsetneq X$. Daher $x\in X$ mit $[x]\neq0$ und somit folgt:
+    Es gilt: $J_{R(T)} T_{0} Q_{N(T)}x= J_{R(T)}T_{0}[x]= J_{R(T)}Tx=
+    Tx\Rightarrow J_{R(T)}T_{0}Q_{N(T)}=T$ für alle $x\in X$. Damit folgt,
+    dass $T=J_{R(T)} T_{0} Q_{N(T)}$. Es ist $\norm{Q_{N(T)}}\leq1$.
+    Denn: $\norm{Q_{N(T)}x}= \ndist{x}= \inf\{\norm{x-z}\colon z\in
+    N(T)\}\leq\norm{x}\Rightarrow\norm{Q_{N(T)}}\leq1$ \todo{Der Schluss muss
+    noch klarer gemacht werden.}. Im Fall $T\neq0$ ist
+    $N(T)\subsetneq X$. Daher existiert ein $x\in X$ mit $[x]\neq0$ und somit folgt:
     $\ndist{x}= \norm{Q_{N(T)}x}= \norm{Q_{N(T)}(x-z)}\leq \norm{Q_{N(T)}}
-    \norm{x-z}\Rightarrow 0<\ndist{x}\leq Q_{N(T)} \ndist{x}\Rightarrow 1\leq
-    Q_{N(T)}\Rightarrow Q_{N(T)}=1$.
+    \norm{x-z}$ für $z\in N(T)$. Es folgt weiter, $0<\ndist{x}\leq
+    \norm{Q_{N(T)}} \ndist{x}\Rightarrow 1\leq Q_{N(T)}$.  Also ist
+    $Q_{N(T)}=1$.
 
     Nun ist zu zeigen, dass $T_{0}$ wohldefiniert ist: Aus $[x_{1}]=
     [x_{2}]$ folgt, $T_{0}[x_{1}]= T_{0}[x_{2}]$. Denn
@@ -1993,12 +2004,19 @@ impliziert: $0=Tx_{n}\rightarrow0=\lim Tx_{n}= T\lim x_{n}=Tx$.
     [x_{1}-x_{2}]\in N(T)$. Also existiert ein $z\in N(T)$ mit $x_{1}=x_{2}+z$
     und es folgt, $T_{0}[x_{1}]= Tx_{1}= T(x_{2}+z)= Tx_{2}= T_{0}[x_{2}]$.
 
-    Es ist $T_{0}$ linear. Für $x\in X$ und $z\in N(T)$ gilt: $\norm{T_{0}x}=
-    \norm{Tx}= \norm{T(x-z)}\leq\norm{T} \norm{x-z}\Rightarrow
-    \norm{T_{0}[x]}\leq \norm{T} \ndist{x}\Rightarrow
-    \norm{T_{0}}\leq\norm{T}$. Andererseits ist $\norm{T}= \norm{J_{R(T)}}
-    T_{0} Q_{N(T)}\leq\norm{T_{0}}$. Also folgt insgesamt, dass $\norm{T_{0}}=
-    \norm{T}$
+    Es ist klar, dass $T_{0}$ linear ist. Im folgenden zeigen wir, dass
+    $\norm{T_{0}}=\norm{T}$ ist. Für $x\in X$ und $z\in N(T)$ gilt:
+    $\norm{T_{0}[x]}= \norm{Tx}= \norm{T(x-z)}\leq\norm{T}
+    \norm{x-z}\Rightarrow \norm{T_{0}[x]}\leq \norm{T} \ndist{x}\Rightarrow
+    \norm{T_{0}}\leq\norm{T}$. Andererseits ist $\norm{T}= \norm{J_{R(T)}
+    T_{0} Q_{N(T)}}\leq \underbrace{\norm{J_{R(T)}}}_{\leq1} \norm{T_{0}}
+    \underbrace{Q_{N(T)}}_{\leq1} \leq\norm{T_{0}}$. Also folgt insgesamt,
+    dass $\norm{T_{0}}= \norm{T}$.
+
+    Zuletzt ist noch nachzuweisen, dass $T_{0}$ bijektiv ist. Nach der
+    Definition von $T_{0}$ ist $T_{0}(X/_{N(T)})= R(T)$. Sei $T_{0}[x]=0$ und
+    es folgt, $Tx=0$. Also ist $x\in N(T)$ und damit ist $[x]=0$. Nach
+    \autoref{satz:i.23} ist somit $T_{0}$ bijektiv.
   \end{proof}
 \end{satz}
 
@@ -2007,7 +2025,7 @@ impliziert: $0=Tx_{n}\rightarrow0=\lim Tx_{n}= T\lim x_{n}=Tx$.
 \end{bemerk}
 
 \begin{bemerk}
-  $T^{-1}_{0}\colon R(T)\rightarrow X/_{N(T)}$ ist nicht stetig, denn es ist
+  Der Operator $T^{-1}_{0}\colon R(T)\rightarrow X/_{N(T)}$ ist nicht stetig, denn es ist
   kein beschränkter linearer Operator.
 \end{bemerk}
 
@@ -2025,7 +2043,7 @@ die folgenden Definitionen:
     gilt, $\norm{J_{X}}=\norm{x}$.
   \end{enumerate}
   Gilt zusätzlich $J_{X}=Y$, so heißt $J$ auch \highl{Isometrie} oder
-  \highl[Isomorphismus!metrischer]{metrischer Isomorphismus}.
+  \highl[Isomorphismus!metrischer]{metrischer Isomorphismus} von $X$ auf $Y$.
 \end{defini}
 
 %satz II.3.2
@@ -2041,7 +2059,7 @@ die folgenden Definitionen:
   \begin{proof}
     Nach dem Faktorisierungssatz (\autoref{satz:II.31}) ist $T_{0}$ durch
     $T_{0}[x]= Qx$ für $x\in X$ definiert. Somit ist $\norm{T_{0}[x]}=
-    \norm{Qx}= \norm{Q(x-z)}\leq \norm{Q} \norm{x-z}$ für $z\in Q$. Also ist
+    \norm{Qx}= \norm{Q(x-z)}\leq \norm{Q} \norm{x-z}\leq\norm{x-z}$ für $z\in Q$. Also ist
     $\norm{T_{0}[x]}\leq\norm{x-z}\leq\ndist{x}$ für $x\in X$.
 
     Für die Umkehrung sei $\epsilon>0$ und für alle $y\in Y$ existiert ein
@@ -2051,20 +2069,21 @@ die folgenden Definitionen:
     existiert $\mathring{x}_{\epsilon}\in\mathring{B}_{X}$ mit
     $Q\mathring{x}_{\epsilon}= \frac{1}{1+\epsilon} \frac{y}{\norm{y}}$ und
     wir setzen $x_{\epsilon}= (1+\epsilon) \norm{y}\mathring{x}_{\epsilon}$.
-    Also folgt, $Qx_{\epsilon}= Q((1+\epsilon) \norm{y}
-    \mathring{x}_{\epsilon})= (1+\epsilon) \norm{y} \frac{y}{\norm{y}}
-    \frac{1}{1+\epsilon}\Rightarrow \norm{x_{\epsilon}}\leq (1+\epsilon)
-    \norm{y} \norm{\mathring{x}_{\epsilon}}< (1+\epsilon) \norm{y}$. Nun sei
-    $T_{0}[x]= Qx=y$ gegeben. Dann existiert zu $\epsilon>0$ ein
-    $x_{\epsilon}>0$ mit $Qx_{\epsilon}=y=Qx=T_{0}[x]$ und
+    Also folgt, $Qx_{\epsilon}= (1+\epsilon) \norm{y}
+    Q\mathring{x}_{\epsilon}= (1+\epsilon) \norm{y} \frac{y}{\norm{y}}
+    \frac{1}{1+\epsilon}=y\Rightarrow \norm{x_{\epsilon}}\leq (1+\epsilon)
+    \norm{y} \norm{\mathring{x}_{\epsilon}}< (1+\epsilon) \norm{y}$.
+
+    Nun sei $T_{0}[x]= Qx=y$ gegeben. Dann existiert zu $\epsilon>0$ ein
+    $x_{\epsilon}\in X$ mit $Qx_{\epsilon}=y=Qx=T_{0}[x]$ und
     $\norm{x_{\epsilon}}\leq(1+\epsilon) \norm{y}= (1+\epsilon) \norm{Qx}=
     (1+\epsilon) \norm{T_{0}[x]}$ und wegen $Qx_{\epsilon}= Qx$ gilt,
-    $x_{\epsilon}-x\in N(Q)$. Somit $x_{\epsilon}\in[x]$. Damit folgt,
+    $(x_{\epsilon}-x)\in N(Q)$. Somit $x_{\epsilon}\in[x]$. Damit folgt,
     $\ndist{x}= \ndist{x_{\epsilon}}\leq\norm{x_{\epsilon}}$ und
     $\ndist{x}\leq \norm{x_{\epsilon}}\leq (1+\epsilon)
     \norm{T_{0}[x]}\Rightarrow\ndist{x} \leq\norm{T_{0}[x]}$. Wegen
     $\epsilon\rightarrow0$ folgt also: $\ndist{x}\leq\norm{T_{0}[x]}$.
-    Insgesamt erhalten wir die Isometrie $T_{0}\in\CL(X_{N(Q)}, Y)$ mit
+    Insgesamt erhalten wir die Isometrie $T_{0}\in\CL(X/_{N(Q)}, Y)$ mit
     $\norm{T_{0}[x]}=\ndist{x}$.
   \end{proof}
 \end{satz}
@@ -2075,7 +2094,8 @@ die folgenden Definitionen:
   identifiziert werden kann.
 \end{bemerk}
 
-\section{Fortsetzung beschränkter linearer Funktionale und
+\section[Fortsetzung von Funktionalen und das Theorem von
+\textsc{Hahn}"~\textsc{Banach}]{Fortsetzung beschränkter linearer Funktionale und
   \textsc{Hahn}"~\textsc{Banach}"~Theorem}
 
 Die Prinzipien der Fortsetzung von beschränkten linearen Operatoren und
@@ -2083,27 +2103,29 @@ Funktionalen haben grundlegende Bedeutung in der Funktionalanalysis.
 
 \begin{defini}
   Seien $X,Y$ normierte Räume und $M\subseteq X$ ein linearer Teilraum. Ein
-  Operator $T\in\CL(X,Y)$ heißt genau dann \highl{Fortsetzung}von
+  Operator $T\in\CL(X,Y)$ heißt genau dann \highl{Fortsetzung} von
   $T_{0}\in\CL(X,Y)$ von $M$ auf $X$, wenn $T_{0}= T\cdot J_{M}$, wobei
-  $J_{M}(x)\coloneq x$ für $x\in M$.
+  $J_{M}(x)\coloneq x$ für $x\in M$. Weiter heißt $T_{0}$ genau dann
+  \highl{Einschränkung} von $T\in\CL(X,Y)$ von $X$ auf $M$, wenn
+  $T_{0}=TJ_{M}$.
 \end{defini}
 
 \begin{bemerk}
-  Manchmal schreibt man auch $T_{M}\coloneq J_{M}$.
+  Manchmal schreibt man auch $T|_{M}\coloneq TJ_{M}$.
 \end{bemerk}
 
 %satz II.4.1
 \begin{satz}
   Sei $M\subseteq X$ ein linearer Teilraum eines normierten Raumes $X$ und $Y$
   ein Banachraum. Dann existiert für $T_{0}\in\CL(M,Y)$ genau eine Fortsetzung
-  $\tau\in\CL(\cl(M), Y)$ von $T_{0}$ von $M$ auf $X$ mit $\norm{T}=
+  $T\in\CL(\cl(M), Y)$ von $T_{0}$ von $\cl(M)$ auf $X$ mit $\norm{T}=
   \norm{T_{0}}$.
   \begin{proof}
     \begin{enumerate}[1.\,Schr{i}tt]
-     \item Wir zeigen zuerst die Existenz einer Fortsetzung von $T_{0}$: Für
+     \item Wir zeigen in diesem Schritt die Existenz einer Fortsetzung von $T_{0}$: Für
       $x\in\cl(M)$ ist der Operator $T\colon\cl(M)\rightarrow Y$ durch
       $Tx\coloneq \lim_{n\rightarrow\infty} T_{0}x_{n}$ definiert, wobei
-      $(x-N)\subset M$ mit $x_{n}\rightarrow x\in\cl(M)$.
+      $(x_{n})\subset M$ mit $x_{n}\rightarrow x\in\cl(M)$.
 
       $T$ ist wohldefiniert, denn für $x\in\cl(M)$ existiert $(x_{n})\subset
       M$ mit $x_{n}\rightarrow x$ und $\norm{T_{0}x_{n}-T_{0}x_{m}}=
@@ -2113,9 +2135,10 @@ Funktionalen haben grundlegende Bedeutung in der Funktionalanalysis.
       T_{0}(x_{n})$. Es bleibt noch zu zeigen, dass $\lim_{n\rightarrow\infty}
       Tx_{n}$ unabhängig von $(x_{n})\subset M$ mit $x_{n}\rightarrow x$ ist.
       Dazu sei $(y_{n})\subset Y$ eine weitere Folge mit $y_{n}\rightarrow x$.
-      Es ist wieder $T_{0}y$ in $Y$ konvergent. Wir kommen damit zu der
+      Es ist wieder $T_{0}y_{n}$ in $Y$ konvergent. Wir kommen damit zu der
       Abschätzung: $\norm{T_{0} x_{n}- T_{0}y_{n}}=
-      \norm{T_{0}(x_{n}-y_{n})}\leq \norm{T_{0}} \norm{x_{n}-y_{n}}$. Also ist
+      \norm{T_{0}(x_{n}-y_{n})}\leq \norm{T_{0}}
+      \norm{x_{n}-y_{n}}\xrightarrow{n\rightarrow\infty} 0$. Also ist
       $\lim_{n\rightarrow\infty} T_{0}x_{n}= \lim_{n\rightarrow\infty} T_{0}
       y_{n}$.
 
@@ -2132,14 +2155,15 @@ Funktionalen haben grundlegende Bedeutung in der Funktionalanalysis.
       \alpha\lim_{n\rightarrow\infty} T_{0}x_{n}+
       \beta\lim_{n\rightarrow\infty} T_{0} y_{n}= \alpha Tx+ \beta Ty$.
 
-      Nun haben wir noch die Beschränktheit zu zeigen: Dazu seien
-      $x,y\in\cl(M), (x_{n})\subset M$ und $x_{n}\rightarrow x$. Dann gilt
-      $\norm{x_{n}}\rightarrow\norm{x}$ und wegen $\lim_{n\rightarrow\infty}
-      T_{0} x_{n}=Tx$ ist auch $\norm{T_{0}x_{n}}\rightarrow\norm{Tx}$.
+      Schließlich haben wir noch die Beschränktheit zu zeigen: Dazu seien
+      $x,y\in\cl(M), (x_{n})\subset M$ und $x_{n}\rightarrow x$. Dann strebt
+      $\norm{x_{n}}$ gegen $\norm{x}$ und es ist auch
+      $\norm{T_{0}x_{n}}\rightarrow\norm{Tx}$ wegen $\lim_{n\rightarrow\infty}
+      T_{0} x_{n}=Tx$.
       Insgesamt haben wir also: $\norm{Tx}= \lim_{n\rightarrow\infty}
       \norm{T_{0}x_{n}}\leq\lim_{n\rightarrow\infty} \norm{T_{0}}
       \norm{x_{n}}= \norm{T_{0}} \norm{x}\Rightarrow\norm{T}\leq\norm{T_{0}}$.
-      Andererseits gilt auch: $\norm{T_{0}}= \sup_{x\in M,\norm{x}\leq1}
+      Aber es gilt auch $\norm{T_{0}}\leq\norm{T}$, denn $\norm{T_{0}}= \sup_{x\in M,\norm{x}\leq1}
       \norm{T_{0}x}= \sup_{x\in M, \norm{x}\leq1}
       \norm{Tx}\leq\sup_{x\in\cl(M), \norm{x}\leq1} \norm{Tx}= \norm{T}$.
      \item Im zweiten Schritt müssen wir noch die Eindeutigkeit zeigen. Dazu
