--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -1341,7 +1341,7 @@ Homöomorphismus offener Mengen des $\R^{n}$. Weiter sind
 \end{align*}
 sind zwei verschiedene Karten mit demselben Kartengebiet.
 
-\begin{defini}
+\begin{defini}[lokale Koordinatentransformation]
   Es heißt $\phi'\circ\phi^{-1}$ eine
   \highl[Koordinatentransformation!lokale]{lokale Koordinatentransformation}
   oder \highl{Kartenwechsel} von Karte~1 zu Karte~2.
@@ -1354,7 +1354,7 @@ sind zwei verschiedene Karten mit demselben Kartengebiet.
 \end{bemerk}
 
 % Vorlesung vom 2008-11-25
-\begin{defini}
+\begin{defini}[$C^{k}$"~verbunden]
   Seien $(U,\phi), (U', \phi')$ zwei Karten mit $U\cap U'\neq\emptyset$. Sie
   heißen \highl{$C^{k}$"~verbunden}, falls die Kartenwechsel
   $\phi\circ\phi^{-1}, \phi\circ(\phi')^{-1}$ jeweils $C^{k}$"~Abbildungen
@@ -1384,7 +1384,7 @@ Aus diesen Überlegungen können wir folgendes Lemma schließen:
   der den $C^{k}$"~Atlas $\CA$ enthält.
 \end{lem}
 
-\begin{defini}
+\begin{defini}[differenzierbare Struktur]
   Eine \highl[Struktur!differenzierbare]{differenzierbare Struktur} auf $M$
   ist ein maximaler $C^{k}$"~Atlas $\CD$ auf $M$. Das Paar $(M, \CD)$ wird als
   $n$"~dimensionale \highl{$C^{k}$"~Mannigfaltigkeit} bezeichnet. Für
@@ -1491,7 +1491,7 @@ Aus diesen Überlegungen können wir folgendes Lemma schließen:
 Seien $M,N$ zwei $C^{k}$"~Mannigfaltigkeiten mit $\dim M=m, \dim N=n$ und
 $l\leq k$.
 
-\begin{defini}
+\begin{defini}[differenzierbar]
   Eine Abbildung $f\colon M\rightarrow N$ heißt \highl{differenzierbar} in
   $x\in M$ der Klasse $C^{l}$, falls $f$ stetig in $X$ ist und Karten $(U,
   \phi, W)$ um $X$ und $(V, \psi,Z)$ um $f(x)$ derart existieren, dass die
@@ -1518,7 +1518,7 @@ $l\leq k$.
 \end{bemerk}
 
 % Vorlesung vom 2008-11-27
-\begin{defini}
+\begin{defini}[$C^{l}$"~differenzierbar]
   Sei $f\colon M\rightarrow N$. Die Abbildung heißt
   \highl{$C^{l}$"~differenzierbar}, falls $f$ in jedem Punkt von $M$
   $C^{l}$"~differenzierbar ist.
@@ -1531,7 +1531,7 @@ $l\leq k$.
   wieder $C^{l}$"~differenzierbar.
 \end{uebung}
 
-\begin{defini}
+\begin{defini}[Diffeomorphismus]
   Sei $f\colon M\rightarrow N$. Die Abbildung heißt
   \highl{$C^{l}$-Diffeomorphismus}\index{Diffeomorphismus}, falls $f$ bijektiv
   ist und $f,f^{-1}$ jeweils $C^{l}$"~Abbildungen sind.
@@ -1712,7 +1712,7 @@ surjektiv: Sei $\overline{v}\in\R^{n}$ und  setzen $v\colon
 D(\phi'\circ\phi^{-1})(\phi(x))\overline{v}$. Damit ist $v\in T_{x}M$ und
 $\Phi(v)=\overline{v}$. Insgesamt ist also $T_{x}M$ isomorph zu $\R^{n}$.
 
-\begin{defini}
+\begin{defini}[Tangentialraum, "~vektoren]
   Es ist $T_{x}M$ mit der obigen Struktur eines $n$"~dimensionalen reellen
   Vektorraums ein \highl{Tangentialraum} an die Mannigfaltigkeit $M$ im Punkt
   $x$. Seine Elemente $v$ heißen \highl{Tangentialvektoren} und ihre Bilder
