Teil der Vorlesung vom 2008-11-13
git-svn-id: https://svn.lug-jena.de/uni-skripte@1955 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -1201,6 +1201,47 @@ Im $\R^{n}$ sind die Aussagen äquivalent:
   erwiesen.
 \end{bemerk}
 
+\begin{defini}[Offene Überdeckung]
+  Sei $A\subset X$. Dann heißt $\CC$ genau dann
+  \highl[Überdeckung!offene]{offene Übberdeckung}, wenn
+  $A\subset\bigcup_{c\in\CC} c$ gilt. Eine \highl{Teilüberdeckung} ist ein
+  Teilsystem, welches $A$ ebenfalls überdeckt.
+\end{defini}
+
+\begin{defini}[Kompakter Raum]
+  Sei $(X,\CT)$ ein topologischer Raum. Er heißt
+  \highl{kompakt}\index{Raum!kompakter}, falls aus jeder offenen Überdeckung
+  von $X$ eine endliche Teilüberdeckung gewählt werden kann.
+\end{defini}
+
+\begin{bsp}
+  \begin{enumerate}
+   \item Der triviale Raum ist kompakt.
+   \item Der diskrete topologische raum ist genau dann kompakt, wenn die
+    Kardinalität kleiner als unendlich ist.
+   \item Der cofinite topologische Raum ist kompakt. Denn sei $G_{i}$ offen
+    und $X=\bigcup_{i\in I} G_{i}= \bigcup_{i\in I} (X\setminus F_{i})$.
+    \todo{Rest der Zeile ergänzen, war nicht lesbar}
+  \end{enumerate}
+\end{bsp}
+
+\begin{defini}
+  Sei $(X,\CT)$ beliebig. Dann heißt $A\subset X$ \highl{kompakt}, falls
+  $(A,\CT|_{A})$ ein kompakter Raum ist.
+\end{defini}
+
+%lem 5.1
+\begin{lem}
+  Es ist $A$ genau dann kompakt, wenn jede offene Überdeckung von $A$
+  bezüglich $\CT$ eine offene Teilüberdeckung besitzt.
+  \begin{proof}
+    \begin{itemize}
+     \item["`$\Rightarrow$"'] \todo{Hier fortsetzen}
+    \end{itemize}
+  \end{proof}
+\end{lem}
+
+
 \todo[inline]{Vorlesung vom 2008-11-13 ergänzen}
 
 % Vorlesung vom 2008-11-20
