Vorlesung vom 2008-12-03 und kleiner Fehler (Danke an Katharina)
git-svn-id: https://svn.lug-jena.de/uni-skripte@1956 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/carl-hoehereana1/skript.ltx
+++ b/carl-hoehereana1/skript.ltx
@@ -89,6 +89,7 @@
 \newtheorem{defini}{Definition}[section]
 \newtheorem{lem}{Lemma}[section]
 \newtheorem{folg}{Folgerung}[section]
+\newtheorem{koro}{Korollar}[section]
 
 \makeatletter
 % \autoref unterscheidet die Umgebungen, die angesprochen werden, anhand
@@ -106,6 +107,9 @@
 \renewcommand*{\c@folg}{\c@satz}
 \renewcommand*{\p@folg}{\p@satz}
 \renewcommand*{\thefolg}{\thesatz}
+\renewcommand*{\c@koro}{\c@satz}
+\renewcommand*{\p@koro}{\p@satz}
+\renewcommand*{\thekoro}{\thesatz}
 \makeatother
 
 % Die folgenden Theoremumgebungen bekommen keine Nummer
@@ -131,6 +135,7 @@
 \newcommand*{\festlautorefname}{Festlegung}
 \newcommand*{\lemautorefname}{Lemma}
 \newcommand*{\folgautorefname}{Folgerung}
+\newcommand*{\koroautorefname}{Korollar}
 % Zwischen Unter- und Unterunterabschnitten sollte nicht unterschieden
 % werden.
 \renewcommand*{\subsectionautorefname}{Abschnitt}
@@ -175,6 +180,7 @@
 \renewcommand*{\phi}{\varphi}
 
 \newcommand*{\K}{\mathbb{K}}
+\newcommand*{\CA}{\mathcal{A}}
 \newcommand*{\CE}{\mathcal{E}}
 \newcommand*{\CK}{\mathcal{K}}
 \newcommand*{\CL}{\mathcal{L}}
@@ -1324,7 +1330,7 @@ Analog gilt $d_{Y}(y_{1}, y_{2})\leq d((x_{1}, y_{1}), (u,v))+ d((u,v),
 
 %Vorlesung vom 2008-11-03
 %satz I.3.5
-\begin{satz}
+\begin{satz}\label{satz:i.35}
   Sei $M\subseteq X$ ein abgeschlossener linearer Teilraum eines normierten
   Raumes $X$. Dann wird durch
   \begin{gather*}
@@ -2119,7 +2125,7 @@ Funktionalen haben grundlegende Bedeutung in der Funktionalanalysis.
 \end{bemerk}
 
 %satz II.4.1
-\begin{satz}
+\begin{satz}\label{satz:II.41}
   Sei $M\subseteq X$ ein linearer Teilraum eines normierten Raumes $X$ und $Y$
   ein Banachraum. Dann existiert für $T_{0}\in\CL(M,Y)$ genau eine Fortsetzung
   $T\in\CL(\cl(M), Y)$ von $T_{0}$ von $\cl(M)$ auf $X$ mit $\norm{T}=
@@ -2189,7 +2195,7 @@ das berühmte \textsc{Hahn}"~\textsc{Banach}"~Theorem. Zur Vorbereitung des
 Beweises müssen wir ein Lemma benutzen:
 
 %lem II.4.2
-\begin{lem}
+\begin{lem}\label{lem:II.42}
   Sei $X$ ein $\C$"~Vektorraum.
   \begin{enumerate}[(i)]
    \item Ist $l\colon X\rightarrow\R$ ein $\R$-lineares Funktional, d.\,h.
@@ -2263,7 +2269,7 @@ Beweises müssen wir ein Lemma benutzen:
 %Vorlesung vom 2008-12-01
 %In der Vorlesung hiess das ein Theorem
 %satz II.4.3
-\begin{satz}[\textsc{Hahn}"~\textsc{Banach}"~Theorem]
+\begin{satz}[\textsc{Hahn}"~\textsc{Banach}"~Theorem]\label{satz:II.43}
   Sei $M\subset X$ ein linearer Teilraum eines normierten Raumes $X$. Dann
   kann jedes beschränkte lineare Funktional auf $M$ normgleich auf $X$
   fortgesetzt werden, d.\,h. $\forall a\in M'\,\exists b\in X'\colon b|_{M}=a$
@@ -2276,7 +2282,7 @@ Beweises müssen wir ein Lemma benutzen:
       \begin{enumerate}[1.\,F{a}ll]
        \item Sei $x_{0}\in X/_{M}$ fixiert. Dann lässt sich jedes $x\in X$
 	eindeutig als $x=u+\lambda x_{0}$ für $u\in M$ und $\lambda\in\R$
-	darstellen, d.\,h. $x=\spn(M\cup \{x_{0}\})$. Sei $r\in\R$ ein freier
+	darstellen, d.\,h. $x\in\spn(M\cup \{x_{0}\})$. Sei $r\in\R$ ein freier
 	Parameter. Der Ansatz $L_{r}(x)\coloneq a(u)+\lambda r$ mit
 	$x=u+\lambda x_{0}$ definiert eine lineare Abbildung von $X$ in $\R$,
 	die $a$ fortsetzt. Denn für $x_{1}=u_{1}+\lambda_{1}x_{0},
@@ -2362,12 +2368,161 @@ Beweises müssen wir ein Lemma benutzen:
 	$m_{0}$ könnte nicht maximal sein. Damit folgt, $X_{0}=X$ und
 	$b\coloneq L_{X_{0}}$ löst das Fortsetzungsproblem im reellen Fall.
       \end{enumerate}
+      % Vorlesung vom 2008-12-03
+
+     \item Sei $X$ ein komplexer normierter Raum unf $M\subset X$ ein linearer
+      Teilraum. Weiter sei $a\in M'$ mit $\norm{a}=1$. Wir betrachten jetzt
+      ein reelles lineares Funktional: $\Re a\colon M\rightarrow\R$. Nach dem
+      obigen zweiten Fall gibt es eine $\R$"~lineare Fortsetzung $l\colon
+      X\rightarrow\R$ von $\Re a$ mit
+      \begin{gather}
+	\label{eq:34}
+	   \norm{l}=\norm{\Re a}
+      \end{gather}
+      Nach \autoref{lem:II.42} Punkt (i) ist $b\coloneq\tilde{l}\colon
+      X\rightarrow\C$, wobei $\tilde{l}\coloneq l(x)-il(ix)$ für alle $x\in X$,
+      ein $\C$"~lineares Funktional. Dabei gilt: $\Re b=l$. Jetzt zeigen wir,
+      dass $b$ eine Fortsetzung von $a$ ist. Denn für $x\in M$ gilt folgendes:
+      $b(x)= l(x)-il(ix)= \Re a(x)-i\Re a(ix)= \Re a(x)-i\Re (ia(x))= \Re
+      a(x)+ i\Im a(x)=a(x)$. Für die Norm gilt $\norm{b}=\norm{a}$. Denn mit
+      \autoref{lem:II.42} Punkt~(iii) und \autoref{eq:34} ist $\norm{b}=
+      \norm{\Re b}=\norm{l}= \norm{\Re a}= \norm{a}$.
     \end{enumerate}
   \end{proof}
 \end{satz}
 
 \begin{bemerk}
   Die Fortsetzung ist im Allgemeinen nicht eindeutig.
+\end{bemerk}
+
+%folg II.4.4
+\begin{folg}(\textsc{Hahn}"~\textsc{Banach})\label{folg:ii.44}
+  \begin{enumerate}[(i)]
+   \item Sei $X\supsetneq\{0\}$ ein normierter Raum und $0\neq x\in X$. Dann
+    existiert ein Funktional $a\in X'$ mit der Eigenschaft $\norm{a}=1$ und
+    $a(x)=\norm{x}$.
+   \item Trennung von Punkten: Seien $x_{1}, x_{2}\in X$ mit der Eigenschaft
+    $x_{1}\neq x_{2}$ Elemente eines normierten Raumes $X\supsetneq\{0\}$.
+    Dann existiert ein Funktional $a\in X'$ mit $\norm{a}=1$ und $a(x_{1})\neq
+    a(x_{2})$.
+   \item Sei $M\subset X$ ein linearer Teilraum eines normierten Raumes $X$.
+    Ist $x\in X$ mit der Eigenschaft, $d(x,M)>0$, so existiert ein Funktional
+    $a\in X'$ mit $a|_{M}=0$ und $a(x)=d(x,M)$. Weiter ist $\norm{a}=1$.
+  \end{enumerate}
+  Insbesondere gilt: Ist $\cl(M)\subsetneq X$, dann existiert ein Funktional
+  $a\in X'$ mit $a\neq0$ und $a|_{\cl(M)}=0$.
+  \begin{proof}
+    \begin{enumerate}[(i)]
+     \item Sei $M=\spn\{x\}$. Wir definieren $a_{0}\colon M\rightarrow\K$
+      durch $a_{0}(\alpha x)\coloneq\alpha\norm{x}$ für $\alpha\in\K$. Dann
+      ist $a_{0}$ linear (klar) und für die Norm gilt: $\norm{a_{0}(\alpha
+      x)}= \abs{\alpha} \norm{x}= \norm{\alpha x}$. Also folgt, dass
+      $\sup_{\norm{y}\leq1} \abs{a_{0}(y)}= \sup_{\norm{y}\leq1} \norm{y}=1$.
+
+      Nach \autoref{satz:II.43} existiert eine Fortsetzung $a\in X'$ von
+      $a_{0}$ mit $\norm{a}=1$ und $a(x)= a_{0}(x)= \norm{x}$.
+     \item Ist Anwendung des obigen Punktes auf $x_{1}-x_{2}=x$.
+     \item Wenn der Abstand von $x$ zu $M$ positiv ist, dann ist $x$ nicht im
+      Abschluss von $M$. Denn wenn es so wäre, dann gäbe es eine Folge, die
+      gegen das $x$ konvergiert. Wir betrachten nun den Quotientenraum
+      $X/_{\cl(M)}$\footnote{Ist wieder ein normierter Raum.}. Dann existiert
+      nach dem ersten Punkt der Folgerung ein Funktional
+      $a_{0}\in(X/_{\cl(M)})'$ mit $\norm{a_{0}}=1$ und $a_{0}([x])=\ndist{x}= 
+      d(x,\cl(M))= d(x,M)>0$.
+
+      Wir setzen $a\coloneq a_{0}\circ Q_{\cl(M)}$:
+      \begin{gather*}
+	\xymatrix{X \ar[d]|{Q_{\cl(M)}} \ar[r]|{a} & \K\\
+      X/_{\cl(M)} \ar[ur]|{a_{0}} &      }
+      \end{gather*}
+      Dann gilt: $a(x)= a_{0}(Q_{\cl(M)}x)= a_{0}([x])= d(x,M)$ und weiter
+      $a(M)= a_{0}([0])=0$. Für die Norm ergibt sich: $\norm{a}=
+      \sup_{x\in\mathring{B}_{x}} \abs{a(x)}=
+      \sup_{[x]\in\mathring{B}_{X/_{\cl(M)}}} \abs{a_{}([x])}= \norm{a_{0}}$
+      nach Definition.
+    \end{enumerate}
+  \end{proof}
+\end{folg}
+
+%koro II.4.5
+\begin{koro}\label{koro:ii.45}
+  Sei $M\subseteq X$ ein linearer Teilraum eines normierten Raumes $X$. Dann
+  sind äquivalent:
+  \begin{enumerate}[(i)]
+   \item $\cl(M)=X$, also ist $M$ dicht in $X$.
+   \item Für $a\in X'$ mit $a(M)=0$ ist $a=0$ auf $X$.
+  \end{enumerate}
+  \begin{proof}
+    \begin{itemize}
+     \item[(i)$\Rightarrow$(ii)] Sei $a\in X'$ mit $a|_{M}=0$. Nach
+      \autoref{satz:II.41} existiert eine eindeutige Fortsetzung
+      $\tilde{a}\colon\cl(M)=X\rightarrow\K$ mit
+      $\norm{\tilde{a}}=\norm{a|_{M}}=0$. Somit ist $\tilde{a}=0$. Da
+      $\tilde{a}$ eindeutig bestimmt ist, ist $a=\tilde{a}=0$.
+     \item[(ii)$\Rightarrow$(i)] Der Beweis erfolgt durch Kontraposition. Wir
+      nehmen an, dass $\cl(M)\neq X$. Nach der \autoref{folg:ii.44} Punkt~3
+      existiert ein Funktional $a\in X'$ mit $a\neq0$ und $a|_{M}=0$. Damit
+      haben wir gezeigt, dass aus Nicht-(i) Nicht-(ii) folgt und der Beweis
+      ist erbracht.
+    \end{itemize}
+  \end{proof}
+\end{koro}
+
+%lem II.4.6
+\begin{lem}\label{lem:ii.46}
+  Sei $(X,d)$ ein separabler metrischer Raum. Dann ist jeder Teilraum
+  $Y\subset X$ separabel, d.\,h. es existiert eine abzählbare Menge $B\subset
+  Y$ mit $\cl(B)=Y$.
+  \begin{proof}
+    \begin{enumerate}[1.\,Schr{i}tt]
+     \item Sei $A\subset X$ eine abzählbare dichte Menge in $X$, d.\,h.
+      $\cl(A)=X$. Dann sind die Mengen
+      $\CA_{1}\coloneq\{\mathring{B}_{r}(a)\colon a\in A\wedge0<r\in\Q\}$ und
+      $\CA_{2}\coloneq\{\mathring{B}_{r}(a)\in\CA_{1}\colon
+      \mathring{B}_{r}(a)\cap Y\neq\emptyset\}$ abzählbar. Für
+      $\mathring{B}_{r}(a)\in\CA_{2}$ wählt man ein
+      $b\in\mathring{B}_{r}(a)\cap Y$ und erhält eine abzählbare Menge
+      $B\subset Y$.
+     \item Es gilt, $\cl(B)=Y$. Denn geben wir uns ein $\epsilon>0$ und ein
+      $y\in Y$ vor. Dann existiert ein $a\in A$ mit der Eigenschaft
+      $d(y,a)<\nicefrac{\epsilon}{3}$ und eine rationale Zahl $r\in\Q$ mit
+      $\nicefrac{\epsilon}{3}<r\nicefrac{\epsilon}{2}$. Nun ist
+      $y\in\mathring{B}_{r}(a)$. Also existiert ein $b\in B$ mit der
+      Eigenschaft, $d(y,b)\leq d(y,a)+d(a,b)<\nicefrac{\epsilon}{3}+
+      r<\epsilon$, d.\,h. $B$ ist dicht in $Y$.
+    \end{enumerate}
+  \end{proof}
+\end{lem}
+
+%satz II.4.7
+\begin{satz}\label{satz:ii.47}
+  Sei $X$ ein normierter Raum. Dann gilt: Ist $X'$ separabel, so ist auch $X$
+  separabel.
+  \begin{proof}
+    Nach \autoref{lem:ii.46} ist mit $X'$ auch die Einheitssphäre $\partial
+    B_{X'}\coloneq\{a\in X'\colon\norm{a}=1\}$ separabel. Sei also
+    $\{a_{1},\dotsc\}\subset\partial B_{X'}$ dicht in $\partial B_{X'}$. Wähle
+    nun $x_{i}\in\partial B_{X'}$ mit $\abs{a_{i}(x_{i})}\geq\nicefrac{1}{2}$.
+    Wir setzen $M\coloneq\spn\{x_{1},x_{2},\dotsc\}$ und zeigen $\cl(M)=X$.
+    Sei $a\in X'$ mit $a|_{M}=0$. Wir zeigen jetzt die Aussage~(ii) von
+    \autoref{koro:ii.45}. Dazu nehmen wir an, dass ein $a\in X'$ mit der
+    Eigenschaft $a|_{M}=0$ und $a\neq0$ existiert. Dann existiert ein
+    $a_{i_{0}}\in\partial B_{X'}$ mit $\norm{a-a_{i_{0}}}\leq\nicefrac{1}{4}$
+    wegen der Separabilität von $\partial B_{X'}$ und es gilt die Abschätzung:
+    $\nicefrac{1}{2}\leq\abs{a_{i_{0}}
+    (x_{i_{0}})}=\abs{a_{i_{0}}(x_{i_{0}})- a(x_{i_{0}})}=
+    \abs{(a_{i_{0}}-a)(x_{i_{0}})}\leq\norm{a-a_{i_{0}}} \norm{x_{i_{0}}}=
+    \norm{a-a_{i_{0}}}\leq\nicefrac{1}{4}$ \lightning{}
+    Also muss $a=0$ sein. Nach \autoref{koro:ii.45} gilt
+    $\cl(M)=\cl(\spn\{x_{1},\dotsc\}=X$ und nach \autoref{satz:i.35} ist dann
+    $X$ separabel.
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  Die Umkehrung von \autoref{satz:ii.47} gilt i.\,A. nicht. Denn sei
+  beispielsweise $X=\ell_{1}$ ist separabel. Aber $X'=\ell_{1}'=\ell_{\infty}$
+  ist \emph{nicht} separabel.
 \end{bemerk}
 
 
@@ -2449,8 +2604,15 @@ x+y\coloneq (\xi_{i}+\eta_{i})$ und $\lambda x\coloneq (\lambda\xi_{i})$ für $\
 %aufgabe 7
 \todo{Aufgaben 1--6 noch einfügen und Überschrift}
 \begin{enumerate}
+ \item Die Räume $\ell_{\infty}(M)$ und $C_{b}(M)$ werden mit
+  $\norm{\cdot}_{\infty}$ zu Banachräumen. Insbesondere gilt für einen
+  kompakten metrischen Raum $M\coloneq C(M)=C_{b}(M)$. Damit ist auch $C(M)$
+  ein Banachraum, falls $M$ ein kompakter metrischer Raum ist.
   %Uebung vom 2008-12-01
- \item \todo{Aufgabe einfügen}\\
+ \item Man zeige, dass die Räume $[C[0,1], \norm{\cdot}_{p}]$ bezüglich der
+  Norm $\norm{f}_{p}\coloneq(\int_{0}^{1}
+  \abs{f(s)}^{p}\,ds)^{\nicefrac{1}{p}}$ für $1\leq p<\infty$ keine
+  Banachräume sind.\\
   Sei
   \begin{gather*}
     \phi_{n}=
