fehlende Vorlesung ergaenzt. Hier muessen noch einige Beweise mit dazu geschrieben werden.
git-svn-id: https://svn.lug-jena.de/uni-skripte@1957 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -1203,7 +1203,7 @@ Im $\R^{n}$ sind die Aussagen äquivalent:
 
 \begin{defini}[Offene Überdeckung]
   Sei $A\subset X$. Dann heißt $\CC$ genau dann
-  \highl[Überdeckung!offene]{offene Übberdeckung}, wenn
+  \highl[Überdeckung!offene]{offene Überdeckung}, wenn
   $A\subset\bigcup_{c\in\CC} c$ gilt. Eine \highl{Teilüberdeckung} ist ein
   Teilsystem, welches $A$ ebenfalls überdeckt.
 \end{defini}
@@ -1236,17 +1236,102 @@ Im $\R^{n}$ sind die Aussagen äquivalent:
   bezüglich $\CT$ eine offene Teilüberdeckung besitzt.
   \begin{proof}
     \begin{itemize}
-     \item["`$\Rightarrow$"'] \todo{Hier fortsetzen}
+     \item["`$\Rightarrow$"'] \todo{Beweis zu Ende führen}
     \end{itemize}
   \end{proof}
 \end{lem}
 
+%satz 5.2
+\begin{satz}
+  \begin{enumerate}
+   \item Sei $(X,\CT)$ kompakt und $F$ abgeschlossen. Dann ist auch $F$ kompakt.
+   \item Sei $(X,\CT)$ ein \textsc{Hausdorff}"~Raum und $F$ kompakt.
+    Dann ist F$F abgeschlossen.
+  \end{enumerate}
+  \begin{proof}
+    \begin{enumerate}
+     \item Sei $\FG$ eine offene Überdeckung von $F$. Dann ist
+      $\FG\cup\{F^{c}\}$ eine offene Überdeckung von $X$ und es existiert eine
+      endliche Teilüberdeckung $\{G_{1},\dotsc, G_{k}, F^{c}\}$ von $X$. Somit
+      folgt, dass $\{G_{1},\dotsc, G_{k}\}$ eine offene Überdeckung von $F$
+      ist.
+     \item Für alle $x\in F$ und festes $y\in F^{c}$ existieren $U_{x},
+      U_{y}^{(x)}\in\CT$ mit $Z_{x}\cap U_{y}^{(x)}=\emptyset$. Dann ist
+      $\{U_{x}\}_{x\in F}$ eine offene Überdeckung von $F$ und es existiert
+      eine endliche Teilüberdeckung $F\subset\{U_{x_{1}},\dotsc, U_{x_{k}}\}$.
+      Weiter folgt, dass $U_{x_{i}}\cap U_{y}^{x_{i}}=\emptyset$ für alle
+      $i=1,\dotsc,k$ und damit ist auch $\bigcap_{i=1}^{k} U_{y}^{x_{i}} \cap
+      F=\emptyset$. Somit ist für alle $y$ das $U_{y}\in F^{c}$ und das
+      Komplement von $F$ ist offen. Also ist $F$ selbst abgeschlossen.
+    \end{enumerate}
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  Die beiden Punkte in obigem Satz sind auch in topologischen Räumen
+  äquivalent. \todo{Die Bemerkung im Skript zielte auf was anderes ab. Klären.}
+\end{bemerk}
+
+%lem 5.3
+\begin{lem}
+  Sei $(X,\CT)$ kompakt. Dann besitzt jede Folge von nichtleeren, absteigenden
+  abgeschlossenen Mengen einen nichtleeren Durchschnitt.
+  \begin{proof}
+    \todo{noch einfügen}
+  \end{proof}
+\end{lem}
+
+\begin{bemerk}
+  \begin{enumerate}
+   \item Für \textsc{Hausdorff}"~Räume gilt auch die Umkehrung der Aussage.
+    Ein Beweis hierzu ist in \cite{rinow} aufgeführt.
+   \item Wenn man die Folge $\{F_{i}\}$ durch eine wohlgeordnete Folge
+    nichtleerer absteigender abgeschlossener Mengen ersetzt, so ist diese
+    Bedingung äquivalent zur Kompaktheit.
+  \end{enumerate}
+\end{bemerk}
+
+\begin{defini}[Kompaktum]
+  Ein kompakter \textsc{Hausdorff}"~Raum heißt \highl{Kompaktum}.
+\end{defini}
+
+\begin{folg}
+  Sei $(X,\CT)$ kompakt. Dann besitzt jede endliche Teilmenge einen
+  Häufungspunkt. Ein Spezialfall hiervon ist, dass jede Folge
+  $\{x_{n}\}_{n=1}^{\infty}\subset X$ eine kompakte Teilfolge besitzt. 
+\end{folg}
+
+\subsection{Stetige Abbildungen auf kompakten Räumen}
+
+%lem 5.5
+\begin{lem}
+  Sei $(X,\CT)$ kompakt sowie $f\colon(X,\CT)\rightarrow (X',\CT')$ stetig.
+  Dann folgt:
+  \begin{enumerate}
+   \item $f(X)$ ist eine kompakte Teilmenge von $X'$.
+   \item Es ist $f$ abgeschlossen, falls $(X,\CT)$ein \textsc{Hausdorff}"~Raum
+    ist.
+  \end{enumerate}
+  \begin{proof}
+    \todo{Beweis ergänzen}
+  \end{proof}
+\end{lem}
+
+\subsection{Produkte von kompakten Räumen}
+%satz 5.6
+\begin{satz}
+  Seien $(X,\CT(X))$ und $(Y,\CT(Y))$ kompakte Räume. Dann ist $(X\times Y,
+  \CT(X)\times\CT(Y))$ ebenfalls kompakt.
+  \begin{proof}
+    \todo{Beweis ergänzen}
+  \end{proof}
+\end{satz}
 
 \todo[inline]{Vorlesung vom 2008-11-13 ergänzen}
 
 % Vorlesung vom 2008-11-20
 \begin{bemerk}
-  Der obige Satz gilt auch für (überabzählbr) unendliche Produkte. Wir
+  Der obige Satz gilt auch für (überabzählbar) unendliche Produkte. Wir
   betrachten eine Familie von topologischen Räumen: $(X_{i}, \CT_{i})_{i\in
   I}$. Dabei ist $I$ eine beliebige Indexmennge. Das kartesische Produkt ist
   definiert als $X\coloneq \times_{i\in I} X_{i}$. Die Basis der Topologie ist
